fix:the grid template on mobile screen

--- a/src/components/css/main.css
+++ b/src/components/css/main.css
@@ -1,6 +1,6 @@
 .calculator-div {
   display: grid;
-  grid-template-columns: repeat(4, 7rem);
+  grid-template-columns: repeat(4, 6rem);
   gap: 3px;
   margin-top: 60px auto;
   grid-template-rows: minmax(7rem, auto) repeat(6, 3rem);
